This is a implementation of fun codes with matrix
Current implementation for a spiral matrix retrievel

--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,8 @@
 *.PDF	 diff=astextplain
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
+
+# Declare files that will always have CRLF line endings on checkout.
+*.css text eol=crlf
+*.html text eol=crlf
+*.js text eol=crlf
